[package]
name = "speed_feed"
version = "0.1.0"
authors = ["Felix Marezki <felix.marezki@exceet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speed_feed_analyzer_ookla = { path = "../speed_feed_analyzer_ookla" }
