[package]
name = "speed_feed_config"
version = "0.1.0"
authors = ["Felix Marezki <felix.marezki@exceet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speed_feed_lib = { path = "../speed_feed_lib" }
config = "0.10"
eclectic = "0.11"
log = "0.4"
simple_logger = "1.6.0"