[package]
name = "speed_feed_lib"
version = "0.1.0"
authors = ["Felix Marezki <felix.marezki@exceet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eclectic = "0.11"
log = "0.4"

[dev-dependencies]
simple_logger = "1.6"