[package]
name = "speed_feed_ookla"
version = "0.1.0"
authors = ["Felix Marezki <felix.marezki@exceet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speed_feed_lib = { path = "../speed_feed_lib" }
jsonpath_lib = "0.2.4"
ajson = "0.2.3"
log = "0.4"

[dev-dependencies]
simple_logger = "1.6"